# opengl-projects

./: README.md
2d_maze/: AGL3-example.cpp  AGL3Drawable.hpp  AGL3Window.cpp  AGL3Window.hpp  Makefile  MyBackground.cpp  MyBackground.h  Triangle.cpp  Triangle.h
2d_maze/shaders/: TriangleFragmentShader.glsl  TriangleInstanceVertexShader.glsl  TriangleVertexShader.glsl  myBackgroundVertexShader.glsl
3d_maze/: 4zadanie.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  TetrahedronSphereDetection.cpp  TetrahedronSphereDetection.h
3d_maze/cmake/modules/: Findlibepoxy.cmake
3d_maze/objects/cube/: Cube.cpp  Cube.h
3d_maze/objects/cube/shaders/: CubeVertexShader.glsl
3d_maze/objects/sphere/: Sphere.cpp  Sphere.h
3d_maze/objects/sphere/shaders/: SphereFragmentShader.glsl  SphereVertexShader.glsl
3d_maze/objects/tetrahedron/: Tetrahedron.cpp  Tetrahedron.h
3d_maze/objects/tetrahedron/shaders/: TetrahedronRewardVertexShader.glsl  TetrahedronVertexShader.glsl
bubbles/: 5zadanie.cpp  AGL3Drawable.hpp  AGL3Window.hpp  Camera.cpp  Camera.h  Makefile
bubbles/objects/cube/: Cube.cpp  Cube.h
bubbles/objects/sphere/: Sphere.cpp  Sphere.h
terrain/: Makefile  chunk.cpp  map_function.cpp  shader_builder.cpp  zadanie6.cpp  zadanie6.hpp
terrain/shaders/: FragmentShader.glsl  TesselationControlShader.glsl  TesselationEvaluationShader.glsl  VertexShader.glsl
texturing/: 7zadanie.cpp  AGL3Window.cpp  Camera.cpp  Camera.h  Makefile  Mesh.cpp  Mesh.hpp
texturing/shaders/mesh/: shader.vs
texturing/shaders/perlin/: shader.fs
(+5 files in other folders)
